--- a/source/_posts/原型控制与交互2.md
+++ b/source/_posts/原型控制与交互2.md
@@ -1,7 +1,7 @@
 ---
 title: 原型控制与交互2
 date: 2020-05-01 20:24:00
-tags:
+tags: 课程作业
 ---
 
 
@@ -26,9 +26,9 @@ p5.js是一个用于创意编码的JavaScript库
  希望我们可以早日战胜新冠病毒
 
 
-![img](https://picsum.photos/600/400/?random)
 
 
+![img](./photo/1.png)
 
 
 
@@ -42,8 +42,8 @@ p5.js是一个用于创意编码的JavaScript库
     当接触病毒时 游戏结束 当蜡烛全部点燃直至光明的到来
 
 
+![烛光](.photo/2.png)
 
-![img](https://picsum.photos/600/400/?random)
 
 
 * 《西湖四季》
@@ -53,7 +53,7 @@ p5.js是一个用于创意编码的JavaScript库
 
 
 
-![img](https://picsum.photos/600/400/?random)
+
 
 
 
