--- a/source/_posts/新加坡＆马来西亚.md
+++ b/source/_posts/新加坡＆马来西亚.md
@@ -1,9 +1,10 @@
 ---
-title: 使用说明
+title: 新加坡＆马来西亚
+excerpt: Singapore ＆ Malaysia
 date: 2020-04-30 18:34:29
-tags:
+tags: 游记
 ---
-Inline styles：
+# 先挖坑以后再填
 
 **strong**, *emphasis*, ***strong and emphasis***,`code`, <u>underline</u>, ~~strikethrough~~, :joy:🤣, [Link](https://example.com), and image:
 
@@ -13,7 +14,7 @@ Inline styles：
 
 Headings:
 
-# 使用说明
+
 
 
 Table:
