--- a/source/_posts/原型控制与交互2.md
+++ b/source/_posts/原型控制与交互2.md
@@ -1,11 +1,11 @@
 ---
 title: 原型控制与交互2
 date: 2020-05-03 20:24:00
-tags: 课程作业
+excerpt: 作业分享
 ---
 
 
-本学期新接触的 P5.js 
+## 本学期新接触的 P5.js 
 
 p5.js是一个用于创意编码的JavaScript库
 旨在使艺术家、设计师、教育者等任何人都可以理解与使用
@@ -14,10 +14,11 @@ p5.js是一个用于创意编码的JavaScript库
 并且在老师和助教的指导下进行了创作
 
 
+***
 
 
+## 《戴好口罩》  
 
-* 《戴好口罩》
  * 作业要求：与疫情相关的交互界面
 
  * 说明：圆形既代表新冠病毒 又代表地球 
@@ -28,11 +29,12 @@ p5.js是一个用于创意编码的JavaScript库
 
 
 
-![img](./photo/1.png)
+![](https://i.loli.net/2020/05/06/15ocn24tOTYzEfp.png)
 
 
 
-*  《烛光》
+## 《烛光》  
+
  + 作业要求：与疫情相关的小游戏
 
  + 说明：没有从天而降的英雄 只有无私奉献的普通人 
@@ -42,20 +44,27 @@ p5.js是一个用于创意编码的JavaScript库
     当接触病毒时 游戏结束 当蜡烛全部点燃直至光明的到来
 
 
-![烛光](.photo/2.png)
+![烛光](https://i.loli.net/2020/05/06/KFhXscNrSj9pM76.png)
 
 
 
-* 《西湖四季》
+## 《西湖四季》  
+
  + 作业要求：与杭州相关
  + 说明：选取了西湖著名的四个景色分别代表西湖的四时之景
     三潭印月-春 曲院风荷-夏 雷锋夕照-秋 断桥残雪-冬
 
 
+![三潭印月-春](https://i.loli.net/2020/05/06/EiMwdRSJxyt4uh2.png)  
+ 
 
+![曲院风荷-夏](https://i.loli.net/2020/05/06/LBiAwkh8n4zTt2Z.png)  
+ 
 
+![雷锋夕照-秋](https://i.loli.net/2020/05/06/GpYeUS6Oqc18mCb.png)  
 
-
-
+![断桥残雪-冬](https://i.loli.net/2020/05/06/Tj5NaOlEqPSJ9zU.png)  
+  
+    
 
 更多精彩请点击 [Link](http://zstu-interaction.art)
